fixing coinwrap css

--- a/client/src/components/coinItem/Coin.css
+++ b/client/src/components/coinItem/Coin.css
@@ -5,7 +5,7 @@
     position: relative;
     width: 320px;
     margin: 2rem;
-    box-shadow: 0 3px 3px rgba(0,0,0,0.5);
+    box-shadow: 0 3px 3px rgba(190, 184, 184, 0.5);
 }
 
 .coinLogo {
